<resources>
    <string name="app_name">My Friendly MORSE</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="option0">MY FRIENDLY MORSE</string>
    <string name="option1">MORSE DETECTION</string>
    <string name="option2">MANUAL TRANSLATION</string>
    <string name="option3">HELP</string>
    <string name="hint">Write your text here</string>
    <string name="changeoption">↑↓</string>
    <string name="CLEAR">CLEAR</string>
    <string name="textresult"> </string>
    <string name="SOUND">🔊</string>
    <string name="LIGHT">💡</string>
    <string name="PLAY">▶</string>
    <string name="DOT">•</string>
    <string name="DASH">-</string>
    <string name="SPACE">␣</string>
    <string name="DELETE">⌫</string>
    <string name="MICROPHONE">🎙️</string>
    <string name="CAMERA">📷</string>

    <string name="help_text">
       HELP\n\n
MyFriendlyMorse lets you work with Morse code in different ways:\n\n
• Manual translator\n
Convert text to Morse code and play it using sound or light, or translate Morse code back into text.\n\n
• Sound Morse detector\n
You can record a real Morse signal using your phone’s microphone.\n
The app will automatically learn the sender’s rhythm and start translating the message in real time.\n\n
⚠️ Important\n
For the sound detector to work properly:\n\n
- Keep the microphone button pressed until the app learns the sender’s pattern\n
- Do not release the button during transmission\n
- Try to keep a steady and consistent rhythm\n\n
- ALWAYS START TO RECORD IN A SILENCE; because in a sound it may only cach the last part and ruin the learning part!\n\n
Thank you for using MyFriendlyMorse!
    </string>
</resources>