<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_only"
    tools:context=".ui.ManualTranslator">

    <!-- BLOQUE 1: Entrada del usuario y cuando se pulsa el boton, muestra de morse de entrada-->
    <FrameLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.4"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="16dp"
            android:textSize="25sp"
            android:background="@drawable/background_manualtranslator"
            android:gravity="top|start"

            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/etoutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="16dp"
            android:textSize="25sp"
            android:background="@drawable/background_manualtranslator"
            android:gravity="top|start"


            android:visibility="gone"

            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/black"
            />
    </FrameLayout>

    <!-- BOTONES (3 ocultos que escriben morse) -->

    <LinearLayout
        android:id="@+id/layoutButtonsfirst"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.495"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputContainer"
        >

        <Button
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:text="@string/changeoption"

            android:backgroundTint="#33D7CCC8"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/buttonDOT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DOT"
            android:visibility="gone"
            android:minWidth="0dp"
            android:backgroundTint="#33D7CCC8"
            android:textColor="@color/white"
            android:textSize="15sp"
             />
        <Button
            android:id="@+id/buttonDASH"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DASH"
            android:visibility="gone"
            android:minWidth="0dp"
            android:backgroundTint="#33D7CCC8"
            android:textColor="@color/white"
            android:textSize="15sp"
             />

        <Button
            android:id="@+id/buttonSPACE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/SPACE"
            android:visibility="gone"
            android:minWidth="0dp"
            android:backgroundTint="#33D7CCC8"
            android:textColor="@color/white"
            android:textSize="15sp"
             />


        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="left"
            android:layout_marginStart="50dp"

            android:backgroundTint="#33D7CCC8"
            android:text="@string/CLEAR"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:minWidth="0dp"
            android:backgroundTint="#33D7CCC8"
            android:visibility="gone"
            android:gravity="center"

            android:text="@string/DELETE"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:background="@drawable/background_manualtranslator"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="top|start"

        android:text="@string/textresult"
        android:textColor="@color/black"

        android:padding="16dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutButtonsfirst"
        app:layout_constraintVertical_bias="0.106"
        app:layout_constraintWidth_percent="0.9" />

    <LinearLayout
        android:id="@+id/layoutButtonssecond"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="1.0"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOutput"
        app:layout_constraintWidth_percent="0.7">

        <Button
            android:id="@+id/btnplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:backgroundTint="#33D7CCC8"
            android:gravity="center"

            android:text="@string/PLAY"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnsound"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"

            android:text="@string/SOUND"

            android:backgroundTint="#33D7CCC8"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnligth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"


            android:gravity="center"
            android:backgroundTint="#33D7CCC8"
            android:text="@string/LIGHT"
            android:textColor="@color/white" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
